// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`should wrap package title names that begin with true or false in quotes. 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 8378E02252D9E1E4-00992c428899e681-89400CEE57FD74FC-143971ddcde58490


"true@^0.0.4":
  version "0.0.4"
  resolved "localhost/true-0.0.4.tgz"
"
`;

exports[`should wrap package title names that begin with true or false in quotes. 2`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: D1A7C2F4565CE3C1-f3d3b154f74e73bf-7756239D174A67D9-d1fdadfe94639f13


"false@^0.0.4":
  version "0.0.4"
  resolved "localhost/false-0.0.4.tgz"
"
`;

exports[`should wrap package title names that begin with true or false in quotes. 3`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 1FDBABBCDAA70232-ad01a302e7454886-1E165C14E0670255-d146a2f75fd14c2a


"falsetto@^0.2.5":
  version "0.2.5"
  resolved "localhost/falsetto-0.2.5.tgz"
"
`;

exports[`should wrap package title names that begin with true or false in quotes. 4`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 4B7CBE162F68D238-77d4fa86576abbb9-FD5AE9558F321C61-f8fd3eff756b42eb


"true-case-path@^2.2.1":
  version "2.2.1"
  resolved "localhost/true-case-path-2.2.1.tgz"
"
`;

exports[`should grab the file specified in the yarn.lock file when no other lockfile is present 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 9541C591F6499D7E-34eacdb2c97aa100-2EF7DBD717B9C2FC-e53e4da5e086df72


emoji-turkey@^1.2.0:
  version "1.2.1"
  resolved "https://registry.npmjs.org/emoji-turkey/-/emoji-turkey-1.2.1.tgz"
"
`;

exports[`should grab the file specified in the yarn.lock file when no other lockfile is present 2`] = `"{"name":"foo","version":"0.0.0","dependencies":{"emoji-turkey":"^1.2.0"},"devDependencies":{}}"`;

exports[`should work for files with long prerelease versions with version numbers in the filename 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: 97E938D34738D140-c9bb708e22c67107-8E8646E54AA40B53-a99114b56cc74db0


test_pkg_with_prerelease@^0.0.0-massively-long-prerelease-tag:
  version "0.0.0-massively-long-prerelease-tag"
  resolved "https://registry.yarnpkg.com/test_pkg_with_prerelease/-/test_pkg_with_prerelease-0.0.0-massively-long-prerelease-tag.tgz#1c35e8548bda8b57df0fa3a8e2d19adc2df871b7"
"
`;

exports[`should work for files with long prerelease versions with version numbers in the filename 2`] = `"{"name":"foo","version":"0.0.0","dependencies":{"test_pkg_with_prerelease":"^0.0.0-massively-long-prerelease-tag"},"devDependencies":{}}"`;

exports[`should work for files with long prerelease versions with no version number in the filename 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: C4A807CA0191E97A-f12382d9a045f641-258DFF03787839E8-99738125a32e4587


"test_pkg_with_prerelease_2@https://github.com/Validark/Validark/raw/master/test_pkg_with_prerelease_2_.tgz":
  version "0.0.1-massively-long-prerelease-tag"
  resolved "https://github.com/Validark/Validark/raw/master/test_pkg_with_prerelease_2_.tgz"
"
`;

exports[`should work for files with long prerelease versions with no version number in the filename 2`] = `"{"name":"foo","version":"0.0.0","dependencies":{"test_pkg_with_prerelease_2":"https://github.com/Validark/Validark/raw/master/test_pkg_with_prerelease_2_.tgz"},"devDependencies":{}}"`;

exports[`should work for files with long prerelease versions with no version number in the filename not in a lockfile 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: C4A807CA0191E97A-f12382d9a045f641-258DFF03787839E8-99738125a32e4587


"test_pkg_with_prerelease_2@https://github.com/Validark/Validark/raw/master/test_pkg_with_prerelease_2_.tgz":
  version "0.0.1-massively-long-prerelease-tag"
  resolved "https://github.com/Validark/Validark/raw/master/test_pkg_with_prerelease_2_.tgz"
"
`;

exports[`should work for files with long prerelease versions with no version number in the filename not in a lockfile 2`] = `"{ "dependencies": { "test_pkg_with_prerelease_2": "https://github.com/Validark/Validark/raw/master/test_pkg_with_prerelease_2_.tgz" } }"`;
